--- a/Task1/app/src/main/res/values-ua/strings.xml
+++ b/Task1/app/src/main/res/values-ua/strings.xml
@@ -17,3 +17,5 @@
         Базовим елементом цієї операційної системи є реалізація Dalvik віртуальної машини Java,
         і все програмне забезпечення і застосування спираються на цю реалізацію Java.</string>
 </resources>
+
+<!-- [Comment] UA is invalid suffiks. It's not working  -->
